# multimode

./: pyproject.toml
ECD/: backtoback_phase_investigation.ipynb  ecd_uneven_chi.ipynb  gf_ecd_different_chis.ipynb  plot_analytical_even_ecd_points.ipynb
WStateCreation/: Qcrew.jl  Visual.jl  W_jon_protocol_loss_impact_on_dm.ipynb  W_jon_protocol_two_mode_full_time_evolution.ipynb  W_measure_3Mode_evolution.ipynb  W_measure_3Mode_ideal_operator.ipynb  W_measure_3Mode_operators.ipynb  evolution.txt  ideal_operator.txt  measure_3Mode_charfunc.ipynb  test_qutip_kehui.ipynb
benchmark-ECD/: plot_results.ipynb  plot_results.py  test.py
benchmark-ECD/benchmark-QuTiP/: bm_utils.py  ecd_timeevolution_master.py
benchmark-ECD/benchmark-QuantumOptics/: bmutils.jl  ecd_timeevolution_master.jl  test.jl
benchmark-ECD/results/: julia-ecd_timeevolution_master_1,2_test.json  julia-ecd_timeevolution_master_1.json  julia-ecd_timeevolution_master_1234_julia.json  julia-ecd_timeevolution_master_2_3.json  qutip_ecd_timeevolution_master_1,2_test.json  qutip_ecd_timeevolution_master_1234_test.json
cnod/Amplitude_estimation/: Amplitude_estimation.ipynb  D_estimation.ipynb  func.py
cnod/Phase_estimation/: 1 - CNOD Sequence.ipynb  3 - CNOD_protocol.ipynb  (+1 more)
experiments/: displacement_calibration.ipynb
helper/: conventions.ipynb  julia_cheatsheet.ipynb  visualization.py
multiMode/: Qcrew.jl  Visual.jl
tests/: sandbox.ipynb
twoModeSq/: Squeezed 2-Mode.ipynb  ecd_runtime.npz  ecd_runtime_with_500.npz  ecd_runtime_with_N.npz  two_mode_ecd_runtime.ipynb  two_mode_squeezed_state.ipynb
(+10 files in other folders)
